SERVER-50892 Mirrored reads tests should excuse retriable errors